--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
     <title>Piggyvest | Register</title>
 </head>
 <body>
     <main class="container">
         <section class="content">
             <div class="logo">
-               <a href="https://www.piggyvest.com"><img src="./assets/img/logo.svg" alt="Piggybank-Logo"></a>
+               <a href="https://www.piggyvest.com"><img src="./logo.svg" alt="Piggybank-Logo"></a>
             </div>
             <div class="form">
                <form action="#" class="form-body">
