--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main class="container">
         <section class="content">
             <div class="logo">
-               <a href="https://www.piggyvest.com"><img src="/logo.svg" alt="Piggybank-Logo"></a>
+               <a href="https://www.piggyvest.com"><img src="./Logo.svg" alt="Piggybank-Logo"></a>
             </div>
             <div class="form">
                <form action="#" class="form-body">
